--- a/public/index.html
+++ b/public/index.html
@@ -2,32 +2,32 @@
   <script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=8728d563c001670504bd83dfa4779a67&libraries=services,clusterer"></script>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon" />
-  <link rel="apple-touch-icon" href="img/apple-touch-icon.png" />
+  <link rel="shortcut icon" href="%PUBLIC_URL%/img/favicon.ico" type="image/x-icon" />
+  <link rel="apple-touch-icon" href="%PUBLIC_URL%/img/apple-touch-icon.png" />
   <link
     rel="apple-touch-icon"
     sizes="72x72"
-    href="img/apple-touch-icon-72x72.png"
+    href="%PUBLIC_URL%/img/apple-touch-icon-72x72.png"
   />
   <link
     rel="apple-touch-icon"
     sizes="114x114"
-    href="img/apple-touch-icon-114x114.png"
+    href="%PUBLIC_URL%/img/apple-touch-icon-114x114.png"
   />
 
-  <link rel="stylesheet" type="text/css" href="css/bootstrap.css" />
+  <link rel="stylesheet" type="text/css" href="%PUBLIC_URL%/css/bootstrap.css" />
   <link
     rel="stylesheet"
     type="text/css"
-    href="fonts/font-awesome/css/font-awesome.css"
+    href="%PUBLIC_URL%/fonts/font-awesome/css/font-awesome.css"
   />
-  <link rel="stylesheet" type="text/css" href="css/style.css" />
+  <link rel="stylesheet" type="text/css" href="%PUBLIC_URL%/css/style.css" />
   <link
     rel="stylesheet"
     type="text/css"
-    href="css/nivo-lightbox/nivo-lightbox.css"
+    href="%PUBLIC_URL%/css/nivo-lightbox/nivo-lightbox.css"
   />
-  <link rel="stylesheet" type="text/css" href="css/nivo-lightbox/default.css" />
+  <link rel="stylesheet" type="text/css" href="%PUBLIC_URL%/css/nivo-lightbox/default.css" />
   <link
     href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700"
     rel="stylesheet"
@@ -47,6 +47,6 @@
 
 <body id="page-top" data-spy="scroll" data-target=".navbar-fixed-top">
   <div id="root"></div>
-  <script type="text/javascript" src="js/jquery.1.11.1.js"></script>
-  <script type="text/javascript" src="js/bootstrap.js"></script>
+  <script type = "text/babel" src="%PUBLIC_URL%/js/jquery.1.11.1.js"></script>
+  <script type = "text/babel" src="%PUBLIC_URL%/js/bootstrap.js"></script>
 </body>
